--- a/CW16/BlogPlatform/template/_base.html
+++ b/CW16/BlogPlatform/template/_base.html
@@ -20,8 +20,8 @@
                     <div class="navbar-nav">
                         <a class="nav-link active" aria-current="page" href="/">Home</a>
                         <a class="nav-link" href="{% url 'posts_list' %}">Posts</a>
-                        <a class="nav-link" href="#">Author</a>
-                        <a class="nav-link" href="#">Categories</a>
+                        <a class="nav-link" href="{% url 'author_list' %}">Author</a>
+                        <a class="nav-link" href="{% url 'categories_list' %}">Categories</a>
                     </div>
                 </div>
                 
