--- a/CW16/BlogPlatform/template/author/author_list.html
+++ b/CW16/BlogPlatform/template/author/author_list.html
@@ -17,14 +17,14 @@ Post List
 <div class="container mt-4">
     <div class="row">
         <div class="col-9">
-            {% for post in posts_list %}
-                <a href="{% url 'post_detail' post.id %}" class="card-link">
+            {% for author in author_list %}
+                <a href="{% url 'author_detail' author.id%}" class="card-link">
                     <div class="card shadow-sm my-3">
                         <div class="card-body">
-                            <h5 class="card-title">{{ post.title }}</h5>
-                            <h6 class="card-subtitle mb-2 text-muted small py-2">{{ post.datetime_created }}</h6>
+                            <h5 class="card-title">{{ author.name }}</h5>
+                            <h6 class="card-subtitle mb-2 text-muted small py-2">{{ author.email }}</h6>
                             <p class="card-text py-3">
-                                {{ post.text }}
+                                {{ author.bio }}
                             </p>
                         </div>
                     </div>
