--- a/CW16/BlogPlatform/template/author/author_list.html
+++ b/CW16/BlogPlatform/template/author/author_list.html
@@ -18,21 +18,25 @@ Post List
     <div class="row">
         <div class="col-9">
             <div class="row">
-                {% for author in author_list %}
-                    <div class="col-lg-6">
-                        <a href="{% url 'author_detail' author.id%}" class="card-link">
-                            <div class="card shadow-sm my-3">
-                                <div class="card-body">
-                                    <h5 class="card-title">{{ author.name }}</h5>
-                                    <h6 class="card-subtitle mb-2 text-muted small py-2">{{ author.email }}</h6>
-                                    <p class="card-text py-3">
-                                        {{ author.bio }}
-                                    </p>
+                {% if author_list %}
+                    {% for author in author_list %}
+                        <div class="col-lg-6">
+                            <a href="{% url 'author_detail' author.id%}" class="card-link">
+                                <div class="card shadow-sm my-3">
+                                    <div class="card-body">
+                                        <h5 class="card-title">{{ author.name }}</h5>
+                                        <h6 class="card-subtitle mb-2 text-muted small py-2">{{ author.email }}</h6>
+                                        <p class="card-text py-3">
+                                            {{ author.bio }}
+                                        </p>
+                                    </div>
                                 </div>
-                            </div>
-                        </a>
-                    </div>
-                {% endfor %}
+                            </a>
+                        </div>
+                    {% endfor %}
+                {% else %}
+                    <h1 class="text-bold shadow-sm">No Data Found 404!</h1>
+                {% endif %}
             </div>
         </div>
         <div class="col-3">
