--- a/CW17/thur/com_proj/TaskManagement/templates/taskmanager/categories.html
+++ b/CW17/thur/com_proj/TaskManagement/templates/taskmanager/categories.html
@@ -69,11 +69,11 @@
                 <div class="col-10">
                     <div class="card shadow my-3 p-5">
                         <h3>Add new Category:</h3>
-                        <form action="{% url 'categories' %}" method="POST">
+                        <form action="{% url 'category_create' %}" method="POST">
                             {% csrf_token %}
                             <div class="form-group py-2">
                                 <label class="py-1">Enter Category title</label>
-                                <input type="text" class="form-control" placeholder="e.g. Some Title" name="title">
+                                <input required type="text" class="form-control" placeholder="e.g. Some Title" name="title">
                             </div>
                             <div class="form-group py-2">
                                 <label class="py-1">Enter Category description:</label>
