--- a/CW17/thur/com_proj/TaskManagement/templates/taskmanager/view_all.html
+++ b/CW17/thur/com_proj/TaskManagement/templates/taskmanager/view_all.html
@@ -136,21 +136,21 @@
             <div class="col-10">
                 <div class="card shadow my-3 p-5">
                     <h3>Add new Task:</h3>
-                    <form action="#" method="POST">
+                    <form action="{% url 'task_create' %}" method="POST">
                         {% csrf_token %}
                         <div class="form-group py-2">
                             <label class="py-1">Enter Task title</label>
-                            <input required type="date" class="form-control" placeholder="e.g. Some Title" name="title">
+                            <input required type="text" class="form-control" placeholder="e.g. Some Title" name="title">
                         </div>
                         <div class="form-group py-2">
                             <label class="py-1">Enter Due date:</label>
-                            <input required type="text" class="form-control" placeholder="e.g. Some Title" name="due_date">
+                            <input required type="date" class="form-control" placeholder="e.g. Some Title" name="due_date">
                         </div>
                         <div class="form-group py-2">
                             <label class="py-1">Enter Status:</label>
                             <select name="status" class="form-control">
-                                {% for s in task %}
-                                    <option value="{{ s }}" selected>{{ s }}</option>
+                                {% for sk, sv in status.items %}
+                                    <option value="{{ sk }}" selected>{{ sv }}</option>
                                 {% endfor %}
                             </select>
                         </div>
@@ -161,15 +161,15 @@
                         </div>
                         <div class="form-group py-2">
                             <label class="py-1">Enter Tags:</label>
-                            <select name="status" class="form-control">
+                            <select name="tag" class="form-control" multiple>
                                 {% for s in tag %}
                                     <option value="{{ s.id }}" selected>{{ s.name }}</option>
                                 {% endfor %}
                             </select>
                         </div>
                         <div class="form-group py-2">
-                            <label class="py-1">Enter Status:</label>
-                            <select name="status" class="form-control">
+                            <label class="py-1">Enter Category:</label>
+                            <select name="category" class="form-control">
                                 {% for s in category %}
                                     <option value="{{ s.id }}" selected>{{ s.name }}</option>
                                 {% endfor %}
