--- a/CW17/thur/com_proj/TaskManagement/templates/taskmanager/categories.html
+++ b/CW17/thur/com_proj/TaskManagement/templates/taskmanager/categories.html
@@ -22,6 +22,7 @@
                                 <div class="card-body">
                                     <blockquote class="blockquote mb-0">
                                         <p>{{ task.date_created }}</p>
+                                        <a href="{% url 'category_detail' task.id %}"><h3>Details</h3></a>
                                     </blockquote>
                                 </div>
                             </div>
