--- a/CW17/thur/com_proj/TaskManagement/templates/taskmanager/task_detail.html
+++ b/CW17/thur/com_proj/TaskManagement/templates/taskmanager/task_detail.html
@@ -33,6 +33,52 @@
                 </div>
 
             </div>
+            <div class="col-9">
+                <div class="card shadow my-3 p-5">
+                    <h3>Add new Task:</h3>
+                    <form action="{% url 'task_update' task.id %}" method="POST">
+                        {% csrf_token %}
+                        <div class="form-group py-2">
+                            <label class="py-1">Enter Task title</label>
+                            <input type="text" class="form-control" placeholder="e.g. Some Title" name="title">
+                        </div>
+                        <div class="form-group py-2">
+                            <label class="py-1">Enter Due date:</label>
+                            <input type="date" class="form-control" placeholder="e.g. Some Title" name="due_date">
+                        </div>
+                        <div class="form-group py-2">
+                            <label class="py-1">Enter Status:</label>
+                            <select name="status" class="form-control">
+                                {% for sk, sv in status.items %}
+                                    <option value="{{ sk }}" selected>{{ sv }}</option>
+                                {% endfor %}
+                            </select>
+                        </div>
+                        <div class="form-group py-2">
+                            <label class="py-1">Enter Category description:</label>
+                            <textarea class="form-control" name="description" rows="8"
+                                      placeholder="Enter your description here..."></textarea>
+                        </div>
+                        <div class="form-group py-2">
+                            <label class="py-1">Enter Tags:</label>
+                            <select name="tag" class="form-control" multiple>
+                                {% for s in tag %}
+                                    <option value="{{ s.id }}" selected>{{ s.name }}</option>
+                                {% endfor %}
+                            </select>
+                        </div>
+                        <div class="form-group py-2">
+                            <label class="py-1">Enter Category:</label>
+                            <select name="category" class="form-control">
+                                {% for s in category %}
+                                    <option value="{{ s.id }}" selected>{{ s.name }}</option>
+                                {% endfor %}
+                            </select>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
 {% endblock %}
