--- a/CW17/thur/com_proj/TaskManagement/templates/taskmanager/task_detail.html
+++ b/CW17/thur/com_proj/TaskManagement/templates/taskmanager/task_detail.html
@@ -15,7 +15,7 @@
                     <p class="mt-2">{{ task.description }}</p>
                     Tags:
                     {% for tag in task.tags.all %}
-                    <h4 class="small text-muted mt-2">{{ tag }}</h4>
+                        <a href="{% url 'tag_detail' tag.id %}"><h4 class="small text-muted mt-2">{{ tag }}</h4></a>
                     {% endfor %}
                     <p class="small text-muted mt-2">Due date: {{ task.category }}</p>
                 </div>
@@ -41,31 +41,38 @@
                         {% csrf_token %}
                         <div class="form-group py-2">
                             <label class="py-1">Enter Task title</label>
-                            <input type="text" class="form-control" placeholder="e.g. Some Title" name="title">
+                            <input type="text" class="form-control" placeholder="e.g. Some Title" name="title" value="{{ task.title }}">
                         </div>
                         <div class="form-group py-2">
                             <label class="py-1">Enter Due date:</label>
-                            <input type="date" class="form-control" placeholder="e.g. Some Title" name="due_date">
+                            <input type="date" class="form-control" placeholder="e.g. Some Title" name="due_date" value="{{task.due_date|date:'Y-m-d'}}">
                         </div>
                         <div class="form-group py-2">
                             <label class="py-1">Enter Status:</label>
                             <select name="status" class="form-control">
-                                <option value="none" selected>Select an Option</option>
                                 {% for sk, sv in status.items %}
-                                    <option value="{{ sk }}">{{ sv }}</option>
+                                    {% if task.status == sk %}
+                                        <option value="{{ sk }}" selected>{{ sv }}</option>
+                                    {% else %}
+                                        <option value="{{ sk }}">{{ sv }}</option>
+                                    {% endif %}
                                 {% endfor %}
                             </select>
                         </div>
                         <div class="form-group py-2">
-                            <label class="py-1">Enter Category description:</label>
+                            <label class="py-1">Enter description:</label>
                             <textarea class="form-control" name="description" rows="8"
-                                      placeholder="Enter your description here..."></textarea>
+                                      placeholder="Enter your description here...">{{ task.description }}</textarea>
                         </div>
                         <div class="form-group py-2">
                             <label class="py-1">Enter Tags:</label>
                             <select name="tag" class="form-control" multiple>
                                 {% for s in tag %}
-                                    <option value="{{ s.id }}">{{ s.name }}</option>
+                                    {% if s in task.tags.all %}
+                                        <option value="{{ s.id }}" selected>{{ s.name }}</option>
+                                    {% else %}
+                                        <option value="{{ s.id }}">{{ s.name }}</option>
+                                    {% endif %}
                                 {% endfor %}
                             </select>
                         </div>
@@ -74,7 +81,11 @@
                             <select name="category" class="form-control">
                                 <option value="none" selected>Select an Option</option>
                                 {% for s in category %}
-                                    <option value="{{ s.id }}">{{ s.name }}</option>
+                                    {% if task.category == s %}
+                                        <option value="{{ s.id }}" selected>{{ s.name }}</option>
+                                    {% else %}
+                                        <option value="{{ s.id }}">{{ s.name }}</option>
+                                    {% endif %}
                                 {% endfor %}
                             </select>
                         </div>
