--- a/CW17/thur/com_proj/TaskManagement/templates/taskmanager/category_detail.html
+++ b/CW17/thur/com_proj/TaskManagement/templates/taskmanager/category_detail.html
@@ -13,6 +13,7 @@
                     <h1>{{ category.name }}</h1>
                     <p class="mt-2">{{ category.description }}</p>
                     <div>
+                        <a href="{% url 'delete' 'cat' category.id %}" class="btn btn-sm btn-danger">Delete</a>
                     </div>
                 </div>
 
