--- a/CW17/thur/com_proj/TaskManagement/templates/taskmanager/tag_detail.html
+++ b/CW17/thur/com_proj/TaskManagement/templates/taskmanager/tag_detail.html
@@ -13,6 +13,7 @@
                     <h1>{{ tag.name }}</h1>
                     <p class="mt-2">{{ tag.description }}</p>
                     <div>
+                        <a href="{% url 'delete' 'tag' tag.id %}" class="btn btn-sm btn-danger">Delete</a>
                     </div>
                 </div>
 
