--- a/CW17/thur/com_proj/TaskManagement/templates/taskmanager/task_detail.html
+++ b/CW17/thur/com_proj/TaskManagement/templates/taskmanager/task_detail.html
@@ -18,6 +18,9 @@
                         <a href="{% url 'tag_detail' tag.id %}"><h4 class="small text-muted mt-2">{{ tag }}</h4></a>
                     {% endfor %}
                     <p class="small text-muted mt-2">Due date: {{ task.category }}</p>
+                    <div>
+                        <a href="{% url 'delete' 'task' task.id %}" class="btn btn-sm btn-danger">Delete</a>
+                    </div>
                 </div>
 
                 <div class="card shadow my-3 p-5">
@@ -41,11 +44,13 @@
                         {% csrf_token %}
                         <div class="form-group py-2">
                             <label class="py-1">Enter Task title</label>
-                            <input type="text" class="form-control" placeholder="e.g. Some Title" name="title" value="{{ task.title }}">
+                            <input type="text" class="form-control" placeholder="e.g. Some Title" name="title"
+                                   value="{{ task.title }}">
                         </div>
                         <div class="form-group py-2">
                             <label class="py-1">Enter Due date:</label>
-                            <input type="date" class="form-control" placeholder="e.g. Some Title" name="due_date" value="{{task.due_date|date:'Y-m-d'}}">
+                            <input type="date" class="form-control" placeholder="e.g. Some Title" name="due_date"
+                                   value="{{ task.due_date|date:'Y-m-d' }}">
                         </div>
                         <div class="form-group py-2">
                             <label class="py-1">Enter Status:</label>
@@ -88,6 +93,24 @@
                                     {% endif %}
                                 {% endfor %}
                             </select>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </form>
+                </div>
+            </div>
+            <div class="col-9">
+                <div class="card shadow my-3 p-5">
+                    <h3>Add new Tag:</h3>
+                    <form action="{% url 'tag_create' %}" method="POST">
+                        {% csrf_token %}
+                        <div class="form-group py-2">
+                            <label class="py-1">Enter Tag title</label>
+                            <input required type="text" class="form-control" placeholder="e.g. Some Title" name="title">
+                        </div>
+                        <div class="form-group py-2">
+                            <label class="py-1">Enter Tag description:</label>
+                            <textarea class="form-control" name="description" rows="8"
+                                      placeholder="Enter your description here..."></textarea>
                         </div>
                         <button type="submit" class="btn btn-primary">Submit</button>
                     </form>
