chore: custom backend for username or email

--- a/CW17/thur/com_proj/TaskManagement/templates/_base.html
+++ b/CW17/thur/com_proj/TaskManagement/templates/_base.html
@@ -52,7 +52,7 @@
                             <a class="dropdown-item" href="{% url 'login' %}">Log in</a>
                         </li>
                         <li>
-                            <a class="dropdown-item" href="#">Sign up</a>
+                            <a class="dropdown-item" href="{% url 'signup' %}">Sign up</a>
                         </li>
                     </ul>
                 </li>
