chore: some changes

--- a/CW17/thur/com_proj/TaskManagement/templates/taskmanager/home.html
+++ b/CW17/thur/com_proj/TaskManagement/templates/taskmanager/home.html
@@ -8,6 +8,7 @@
     <section>
         <div class="container">
             <div class="row">
+            {{ user.username }}
                 {% for task in page_obj %}
                     {#                <a href="{% url 'task_detail' task.id %}" style="text-decoration: none">#}
 
