--- a/CW17/thur/com_proj/TaskManagement/templates/registration/login.html
+++ b/CW17/thur/com_proj/TaskManagement/templates/registration/login.html
@@ -17,7 +17,7 @@
                     Or
                   </span>
                 </div>
-                <a href="#" class="btn btn-primary mt-2 mb-3 w-100">Sign up</a>
+                <a href="{% url 'signup' %}" class="btn btn-primary mt-2 mb-3 w-100">Sign up</a>
             </form>
         </div>
 
