--- a/CW18/Debugging-Exercise/Todo Project/templates/Home/todo_detail.html
+++ b/CW18/Debugging-Exercise/Todo Project/templates/Home/todo_detail.html
@@ -3,7 +3,10 @@
 
 {% block content %}
     <div class="card">
-        {{ todo }}
+        <p>{{ todo.title }}</p>
+        <p>{{ todo.description }}</p>
+        <p>{{ todo.is_completed }}</p>
+        <p>{{ todo.created_at }}</p>
     </div>
 
         <form method="post" action="">
