--- a/CW17/thur/com_proj/TaskManagement/templates/_base.html
+++ b/CW17/thur/com_proj/TaskManagement/templates/_base.html
@@ -54,6 +54,11 @@
                         <li>
                             <a class="dropdown-item" href="{% url 'signup' %}">Sign up</a>
                         </li>
+                        {% if user.is_authenticated %}
+                            <li>
+                                <a class="dropdown-item" href="{% url 'profile' user.id %}">Profile</a>
+                            </li>
+                        {% endif %}
                     </ul>
                 </li>
                 {% block navbar_item %}
