--- a/BlogPlatformProject/template/index.html
+++ b/BlogPlatformProject/template/index.html
@@ -1,32 +1,59 @@
 {%extends 'base.html'%}
  {% block title%}
-        <title>Maktab Blog</title>
+        <title>Maktab Blog </title>
 {%endblock title%}
 {% block content%}
-    <div class="container my-4">
-        <div class="row">
-            <div class="col-12">
-                <div class="row">
-                    {% if query %}
-                        {% for cat in query %}
-                            <div class="col-lg-6">
-                                <a href="{% url 'post_details' cat.id%}" class="card-link">
-                                    <div class="card shadow-sm my-3">
-                                        <div class="card-body">
-                                            <h5 class="card-title">{{ cat.title}}</h5>
-                                            <p class="card-text py-3">
-                                                {{ cat.content|truncatewords:10 }}
-                                            </p>
-                                        </div>
-                                    </div>
-                                </a>
-                            </div>
-                        {% endfor %}
-                    {% else %}
-                        <h1 class="text-bold shadow-sm">No Data Found 404!</h1>
-                    {% endif %}
+
+
+
+{% if searched %}
+<div class="container px-4 px-lg-5">
+
+            <div class="row gx-4 gx-lg-5 justify-content-center">
+                <div class="col-md-10 col-lg-8 col-xl-7">
+                    {% for post in searched %}
+                    <!-- Post preview-->
+                    <div class="post-preview">
+                        <a href="{% url 'blog:post_details' post.id%}">
+                            <h2 class="post-title">{{post.title}}</h2>
+                            <h3 class="post-subtitle">{{post.category}}</h3>
+                        </a>
+                        <p class="post-meta">
+                            Posted by
+                            <a href="#!">{{post.author}}</a>
+                            on {{post.publication_date}}
+                        </p>
+                    </div>
+                     {% empty %}
+                     <div class="post-preview">
+                            <h2 class="post-title"> Not fond !</h2>
+
+                    </div>
+                    <!-- Divider-->
+                    <hr class="my-4" />
+                    {% endfor%}
                 </div>
             </div>
         </div>
-    </div>
+
+
+{% endif%}
+
+{% if post %}
+<article class="m-6">
+<div class="container px-5 px-lg-5">
+<div class="card row gx-4 gx-lg-5 justify-content-center " style="width: 18rem;">
+  <div class="card-body">
+    <h5 class="card-title">Last viewed post</h5>
+    <h6 class="card-subtitle mb-2 text-muted">{{ post.title }}</h6>
+    <p class="card-text"></p>
+    <a href="{% url 'blog:post_details' post.id %}" class="card-link">post link</a>
+    <a href="{% url 'author_details' post.author_id %}" class="card-link">author link</a>
+  </div>
+</div>
+</div>
+</article>
+
+{% endif %}
+
 {% endblock content%}
