--- a/BlogPlatformProject/template/Blog/post_list.html
+++ b/BlogPlatformProject/template/Blog/post_list.html
@@ -12,7 +12,7 @@
                        {% for post in all_posts%}
                     <!-- Post preview-->
                     <div class="post-preview">
-                        <a href="{% url 'post_details' post.id%}">
+                        <a href="{% url 'blog:post_details' post.id%}">
                             <h2 class="post-title">{{post.title}}</h2>
                             <h3 class="post-subtitle">{{post.category}}</h3>
                         </a>
