--- a/BlogPlatformProject/template/base.html
+++ b/BlogPlatformProject/template/base.html
@@ -26,22 +26,17 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-      <a class="navbar-brand" href="#">Maktab Blog</a>
+      <a class="navbar-brand" href="/">Maktab Blog</a>
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'home'%}">Home</a></li>
+        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'blog:home'%}">Home</a></li>
           <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'author_list'%}">Authors</a></li>
-          <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'post_list'%}">Posts</a></li>
-          <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'category_list' %}">Category</a></li>
+          <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'blog:post_list'%}">Posts</a></li>
+          <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'blog:category_list' %}">Category</a></li>
 
       </ul>
-        <form action="/" method="get">
-            <label for="search"></label>
-            <input class="searchbar-input" name="search" type="text" id="search" placeholder="search">
-            <input style="color: #1a1e21" type="submit" value="Go">
-        </form>
-<!-- Search bar -->
-      <form class="d-flex" >
-
+      <form class="d-flex" method="get" action="{% url 'blog:home' %}">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="search">
+        <button class="btn btn-outline-dark" type="submit">Search</button>
       </form>
     </div>
   </div>
@@ -54,8 +49,8 @@
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <div class="site-heading">
-                            <h1> Maktab 98 </h1>
-                            <span class="subheading"> This is a test for learning Django. </span>
+                            <h1>Maktab 98</h1>
+                            <span class="subheading">This a test for learning Django.</span>
                         </div>
                     </div>
                 </div>
