chore: part 2 done

--- a/CW17/thur/com_proj/TaskManagement/templates/taskmanager/view_all.html
+++ b/CW17/thur/com_proj/TaskManagement/templates/taskmanager/view_all.html
@@ -209,7 +209,7 @@
             <div class="col-10">
                 <div class="card shadow my-3 p-5">
                     <h3>Add new Task:</h3>
-                    <form action="{% url 'task_create' %}" method="POST">
+                    <form action="" method="POST">
                         {% csrf_token %}
                         <div class="form-group py-2">
                             <label class="py-1">Enter Task title</label>
