--- a/CW17/thur/com_proj/TaskManagement/templates/taskmanager/task_create.html
+++ b/CW17/thur/com_proj/TaskManagement/templates/taskmanager/task_create.html
@@ -3,7 +3,7 @@
 {% block content %}
     <form method="post" action="">
     {% csrf_token %}
-    {{ form }}
+    {{ form.as_p }}
     <button type="submit" class="btn btn-success">Submit</button>
     </form>
 {% endblock %}
