--- a/CW17/thur/com_proj/TaskManagement/templates/taskmanager/task_detail.html
+++ b/CW17/thur/com_proj/TaskManagement/templates/taskmanager/task_detail.html
@@ -38,7 +38,7 @@
             <div class="col-9">
                 <div class="card shadow my-3 p-5">
                     <h3>Add new Task:</h3>
-                    <form action="{% url 'task_update' task.id %}" method="POST">
+                    <form action="{% url 'task_update' task.id %}" method="post">
                         {% csrf_token %}
                         <div class="form-group py-2">
                             <label class="py-1">Enter Task title</label>
